# si4

./: .gitignore
firmware/: Cargo.toml  sdkconfig.defaults
firmware/src/: main.rs
firmware/src/services/: mod.rs
firmware/src/subsystems/: buttons.rs  core.rs  mod.rs
hardware/si4/: Footprints.kicad_sym  fp-info-cache  fp-lib-table  si4-kk.txt  si4.kicad_pcb  si4.kicad_prl  si4.kicad_pro  si4.kicad_sch  si4.sp.cir  sym-lib-table
hardware/si4-hat/: fp-info-cache  si4-hat-kk.txt  si4-hat.kicad_pcb  si4-hat.kicad_prl  si4-hat.kicad_pro  si4-hat.kicad_sch  si4-hat.kicad_sch-bak  si4-hatsp.cir  sym-lib-table
hardware/si4-hat/EASYEDA_MODELS/: AUDIO-TH_PJ-309A-2.step  CONN-TH_PJ-316M.step  QFN-32_L5.0-W5.0-H0.9-P0.50.step  QFN-40_L6.0-W6.0-P0.50-TL-EP4.1.step
hardware/si4-hat/EasyEDA_Lib/: EasyEDA_Lib.elibz
hardware/si4-hat/bom/: ibom.html
hardware/si4/Footprints.pretty/: MTS-103 Switch.kicad_mod  QFN40P500X500X80-41N.kicad_mod
