[package]
name = "firmware"
version = "0.1.0"
authors = ["Ali Imran <ali.adnani@hotmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "firmware"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embassy-sync =  { version = "0.7.2", features = ["log"]}
mcp23017 = "1.1.0"
static_cell = "2.1.1"

[build-dependencies]
embuild = "0.33"
